--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
+
         <activity
             android:name=".Activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Activity.RestaurantActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.MenuActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.MapActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
