--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,31 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="미식가"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MyApplication"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
         <activity
-            android:name=".Activity.MainActivity"
-            android:exported="true">
+            android:name=".Activity.RecommandActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.LoadingActivity"
+            android:exported="true"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Activity.UserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.MainActivity"
+            android:exported="false" />
         <activity
             android:name=".Activity.RestaurantActivity"
             android:exported="false" />
@@ -36,10 +46,8 @@
         <activity
             android:name=".Activity.MapActivity"
             android:exported="false" />
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="519214cc7352d65e8113c8c6b2da1438" />
     </application>
-
-    <meta-data
-        android:name="com.kakao.sdk.AppKey"
-        android:value="	519214cc7352d65e8113c8c6b2da1438"/>
-
 </manifest>
